@@ -56,7 +56,7 @@
 
 
     <properties>
-        <otp.serialization.version.id>76</otp.serialization.version.id>
+        <otp.serialization.version.id>78</otp.serialization.version.id>
         <!-- Lib versions - keep list sorted on property name -->
         <geotools.version>27.1</geotools.version>
         <google.dagger.version>2.44</google.dagger.version>
@@ -282,7 +282,6 @@
                         --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
                         --add-opens java.base/java.util.regex=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
-                        --add-opens java.base/java.util.logging=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
@@ -875,9 +874,9 @@
             <version>1.2.5</version>
         </dependency>
         <dependency>
-            <groupId>com.wdtinc</groupId>
+            <groupId>io.github.ci-cmg</groupId>
             <artifactId>mapbox-vector-tile</artifactId>
-            <version>3.1.0</version>
+            <version>4.0.5</version>
         </dependency>
         <dependency>
             <groupId>net.objecthunter</groupId>
